[package]
name = "src"
version = "0.2.0"
edition = "2024"

[dependencies]
regex = "1"
uuid = { version = "1.0", features = ["v4", "serde"] }
iced = "0.14.0"
iced_aw = { version = "0.13.0", features = ["full"] }
iced_fonts = { version = "0.3.0", features = ["full"] }
image = "0.25.9"
rfd = "0.17.2"
open = "5.3.3"
palette = "0.7.6"
fuse-rust = "0.4.0"

[target.x86_64-pc-windows-gnu]
linker = "x86_64-w64-mingw32-gcc"
